Fix to CSS on mobile browsers
Get rid of scrollbars showing up on mobile during the swoosh.

--- a/src/index.less
+++ b/src/index.less
@@ -1,7 +1,16 @@
 @nav-height: 50px;
 
-body {
+html, body {
 	padding: 10px;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	overflow: hidden;
+	-webkit-transform: translate3d(0, 0, 0);
+	-moz-transform: translate3d(0, 0, 0);
+	transform: translate3d(0, 0, 0);
 }
 
 article.card {
